# learningOpenGL

./: .gitignore  CMakeLists.txt
heads/: camera.hpp  head.hpp  shader.hpp
libs/: glad.c
shaders/1_shader/: vShader2.glsl
shaders/2_texture/: fShader.glsl  vShader.glsl
shaders/4_3d/: fShader.glsl
shaders/basic/1_shader/: fShader2.glsl  fShader3.glsl  fragmentShader.glsl  vertexShader.glsl
shaders/basic/3_transform/: vShader.glsl
shaders/basic/4_3d/: vShader.glsl
shaders/light/: 1_vShader.glsl
src/: 1_shader.cpp  2_texture.cpp  3_transform.cpp  4_3d.cpp
src/basic/: 1_shader.cpp  2_texture.cpp  3_transform.cpp  4_3d.cpp  CMakeLists.txt
src/heads/: head.hpp  shader.hpp
src/light/: 1_color.cpp  CMakeLists.txt
